[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemies/Graphics/Farmer/Dead_@0.5x.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Graphics/Farmer/Front_@0.5x.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Graphics/Farmer/Back_@0.5x.png" type="Texture" id=3]
[ext_resource path="res://Scenery/Graphics/Shadow_@0.5x.png" type="Texture" id=5]
[ext_resource path="res://Enemies/Farmer.gd" type="Script" id=6]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Farmer:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2.73208, 1 ),
"update": 0,
"values": [ 0.0, 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Dead_05x:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2.73, 1 ),
"update": 0,
"values": [ 0.0, 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Farmer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 0.366021, 0.31864, 1 ),
"update": 0,
"values": [ Vector2( 0, 60 ), Vector2( 0, 55 ), Vector2( 0, 57 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Dead_05x:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1.93187, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 1.3, 1.5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Dead_05x:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 0.37, 0.32, 1 ),
"update": 0,
"values": [ Vector2( 0, 30 ), Vector2( 0, 25 ), Vector2( 0, 27 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Farmer:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1.93, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.72, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Farmer:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Dead_05x:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Dead_05x:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Shadow_05x:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 0.406126, 0.353553, 0.392292 ),
"update": 0,
"values": [ Vector2( 0, 60 ), Vector2( 0, 60 ), Vector2( 35, 54 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Farmer/Flipper/Front_05x:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Farmer/Flipper/Back_05x:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Dead_05x:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Farmer:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 0.732043, 1.31951, 0.615572, 1 ),
"update": 0,
"values": [ 0.0, 5.0, -5.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Farmer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 0.554785, 1.56917, 1 ),
"update": 0,
"values": [ Vector2( 0, 60 ), Vector2( 0, 55 ), Vector2( 0, 60 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Dead_05x:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Farmer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.95, 1.05 ), Vector2( 1.05, 0.95 ) ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 25.444
height = 22.4862

[node name="Farmer" type="RigidBody2D"]
collision_layer = 4
collision_mask = 87
mode = 2
mass = 2.0
physics_material_override = SubResource( 1 )
script = ExtResource( 6 )
speed = 3000.0

[node name="Dead_05x" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, 30 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
offset = Vector2( -9.58101, -33.9429 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Walk = SubResource( 4 )
anims/Wobble = SubResource( 5 )

[node name="Farmer" type="Node2D" parent="."]
position = Vector2( 0, 60 )

[node name="Flipper" type="Node2D" parent="Farmer"]

[node name="Back_05x" type="Sprite" parent="Farmer/Flipper"]
position = Vector2( 7.008, -60 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="Front_05x" type="Sprite" parent="Farmer/Flipper"]
position = Vector2( 7.008, -60 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="FirePoint" type="Position2D" parent="Farmer/Flipper"]
position = Vector2( 76.7107, -54.1315 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 60 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -11.0032, -10 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="Shadow_05x" type="Sprite" parent="."]
position = Vector2( 0, 60 )
scale = Vector2( 1, 0.804405 )
z_index = -4
texture = ExtResource( 5 )

[node name="FireTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.6

[node name="RepathTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0

[node name="SenseTimer" type="Timer" parent="."]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="timeout" from="RepathTimer" to="." method="_on_RepathTimer_timeout"]
[connection signal="timeout" from="SenseTimer" to="." method="_on_SenseTimer_timeout"]
